# Axum-Admin

./: .env  .gitignore  Cargo.toml  Config.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/common/: jwt.rs  mod.rs
api/src/system/: info.rs
api/src/todo/: mod.rs
api/src/user/: mod.rs
app/: Cargo.toml
app/src/: main.rs
configs/: Cargo.toml
configs/src/: config.rs  lib.rs
logs/: log.2022-12-11
migration/: Cargo.toml
migration/sql/: user.sql
model/: Cargo.toml
model/src/: lib.rs
model/src/common/: jwt.rs
model/src/common/response/: mod.rs
model/src/entity/: mod.rs  post.rs  prelude.rs  todo.rs  user.rs  user_token.rs
model/src/error/: mod.rs
model/src/response/: mod.rs
model/src/system/: info.rs
model/src/todo/request/: mod.rs
model/src/user/request/: mod.rs
router/: Cargo.toml
router/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/common/: jwt.rs
service/src/system/: info.rs
service/src/todo/: mod.rs
service/src/user/: mod.rs
utils/: Cargo.toml
utils/src/: captcha.rs  db.rs  encrypt.rs  lib.rs  log.rs  rand.rs  redis.rs
