[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = {path = "../configs"}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
axum = {workspace = true, features = ["headers"]}
chrono = {workspace = true}
jsonwebtoken = {workspace = true}
scru128 = {workspace = true}
once_cell = {workspace = true}
thiserror = {workspace = true}
