[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = {path = "../configs"}
# time
chrono = { workspace = true}
time = { workspace = true }
# log
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = {workspace = true,default-features =false,  features = ["json", "env-filter", "local-time", "registry"]}
# db
sea-orm = { workspace = true,  features = ["macros", "runtime-tokio-rustls", "with-chrono","sqlx-postgres"] }
tokio = {workspace = true}
once_cell = {workspace = true}
redis = {workspace = true, features = ["tokio-comp"] }
